--- a/001-data-exploration.ipynb
+++ b/001-data-exploration.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data exploration\n",
+    "The goal of the project is to classify human activities (*running, jumping, standing, walking, falling, lying, sitting*) with data coming from a single imu sensor. The original dataset and the reference paper whose result I want to reproduce, are available here: http://www.kn-s.dlr.de/activity/. The dataset should be placed in the `dataset-orig` folder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -362,20 +370,12 @@
     "    mat = scipy.io.loadmat('dataset-orig/{}'.format(dataset), squeeze_me=True, struct_as_record=True)\n",
     "    keys = [k for k in mat.keys() if k[0] != '_']\n",
     "    for j, k in enumerate(keys):\n",
-    "        \"\"\"\n",
-    "        if j < 11:\n",
-    "            continue\n",
-    "        \"\"\"\n",
     "        record = mat[k]\n",
     "        sensor = record[0]\n",
     "        attitude = record[1]\n",
     "        labels = record[2]\n",
     "        frame_ranges = record[3]\n",
-    "        '''\n",
-    "        print('### DEBUG - {} ###'.format(k))\n",
-    "        print(labels)\n",
-    "        print(frame_ranges)\n",
-    "        '''\n",
+    "        \n",
     "        # cycle through the labels\n",
     "        for i in range(0, len(frame_ranges), 2):\n",
     "            # create current label\n",
@@ -399,12 +399,6 @@
     "            elif (i+2 < len(frame_ranges)) and (frame_ranges[i+2] < frame_ranges[i+1]+1):\n",
     "                print('mislableing error found, length', frame_ranges[i+1]-frame_ranges[i+2], frame_ranges[i+1])\n",
     "                frame_ranges[i+2] = frame_ranges[i+1]+1\n",
-    "                \"\"\"\n",
-    "                frame_length = frame_ranges[i+1] - frame_ranges[i+2] -1\n",
-    "                # labeling transitions with current and subsequent actions\n",
-    "                label = labels[label_index]\n",
-    "                data['labels'] += [label] * frame_length\n",
-    "                \"\"\"\n",
     "\n",
     "        # sensor[:, 0] indicates time which is not useful, columns 7: are magnetometer, not useful\n",
     "        # using list concatenation instead of numpy arrays is more efficient\n",
@@ -417,16 +411,6 @@
     "\n",
     "        data['attitude'] += attitude[:, 1:].tolist()\n",
     "        data['person'] += [k] * len(sensor[:, 1])\n",
-    "\n",
-    "        \"\"\"\n",
-    "        print(j)\n",
-    "        print(len(data['acc_x']))\n",
-    "        print(len(data['labels']))\n",
-    "        print(labels, len(labels))\n",
-    "        print(frame_ranges, len(frame_ranges))\n",
-    "        if j == 11:\n",
-    "            break\n",
-    "        \"\"\"\n",
     "    \n",
     "df = pd.DataFrame(data = data)"
    ]
@@ -664,7 +648,6 @@
    ],
    "source": [
     "activity_counts = df['labels'].value_counts()\n",
-    "#activity_counts.loc[~activity_counts.index.str.startswith('TRANS')]\n",
     "activity_counts"
    ]
   },
@@ -738,7 +721,6 @@
     "# replace transients with action labels\n",
     "def fill_transients(df, column_name):\n",
     "    transitions = df['labels'].str.startswith('TRANS')\n",
-    "            #positions = df.index.values\n",
     "    transitions_index = df.loc[transitions].index\n",
     "\n",
     "    # create a nested list with groups referred to\n",
@@ -768,9 +750,6 @@
     "        if t != transitions_flat[i]:\n",
     "            raise ValueError('Value {} at position {} was skipped'.format(t, i))\n",
     "            break\n",
-    "    \n",
-    "    # print(len(flat_list))\n",
-    "    # print(len(transitions_index))\n",
     "    \n",
     "    adapted_labels = []\n",
     "    for trans_block in transitions_nested:\n",
@@ -870,7 +849,7 @@
     "* ~~data augmentation of underrepresented classes~~\n",
     "* test with global frame\n",
     "* reduce sampling rate to a value lower than 100Hz\n",
-    "* variable frame size?"
+    "* test with variable frame size"
    ]
   },
   {
@@ -896,7 +875,6 @@
     "        remain = stride * n - (df.shape[0] - window)\n",
     "    else:\n",
     "        remain = window - df.shape[0]\n",
-    "    #print('have to add {} zeros'.format(remain))\n",
     "    # create the correct nr of zero valued rows and set corresponding label\n",
     "    df_padded = pd.DataFrame(data = np.zeros((remain, df.shape[1])), columns=df.columns)\n",
     "    df_padded[label_column_name] = label\n",
@@ -928,14 +906,11 @@
     "# cycle through each unique activity\n",
     "activities = df[label_column_name].unique()\n",
     "for activity in activities:\n",
-    "    #print('doing ', activity)\n",
     "    df_activity = df.loc[df[label_column_name] == activity]\n",
-    "    #print('shape is', df_activity.shape)\n",
     "    \n",
     "    # check if padding is needed\n",
     "    if df_activity.shape[0] % stride != 0:\n",
     "        df_activity = append_zeros(df_activity, stride, window)\n",
-    "    #print('shape after is', df_activity.shape)\n",
     "        \n",
     "    start, end = framing_range(0, 0, stride, window, initialize=True)\n",
     "    # until current activity is exhausted\n",
@@ -1130,22 +1105,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "ys_train = pd.Series(y_train)\n",
-    "ys_train.value_counts()/ys_train.value_counts().sum()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "ys_test = pd.Series(y_train)\n",
-    "ys_test.value_counts()/ys_test.value_counts().sum()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1270,7 +1229,6 @@
     "    augmented_values = np.array(augmented_values)\n",
     "    print('Shape of the augmented sensor values')\n",
     "    print(augmented_values.shape)\n",
-    "    #print(len(labels))\n",
     "    \n",
     "    # attach the augmented data to the training and test datasets\n",
     "    x_train = np.vstack([x_train, augmented_values])\n",
