--- a/002-ml.ipynb
+++ b/002-ml.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine learning\n",
+    "This notebook gathers the machine learning pipeline for training and testing the various models found on `/models`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
@@ -11,9 +19,6 @@
     "# generic imports\n",
     "import numpy as np\n",
     "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import pyplot\n",
-    "import seaborn as sn\n",
     "import h5py\n",
     "import time\n",
     "from subprocess import call\n",
@@ -27,52 +32,9 @@
     "from keras.layers import Add, Input, Dense, Activation, BatchNormalization, Flatten, Conv2D, Conv1D, MaxPooling1D, MaxPooling2D, Dropout, ELU, AveragePooling2D\n",
     "from keras.models import Model, Sequential, model_from_json\n",
     "\n",
-    "sn.set(style=\"white\", context=\"talk\")\n",
-    "\n",
     "from utils import terminate, outdir, load_dataset, show_stats, ohe_to_label, conf_matrix, export_model, f1\n",
-    "from models import m_1d, m_1d2d, m_1d2d_01, m_1d2d_01_reg, m_3d, m_resnet\n",
-    "\n",
-    "%matplotlib inline"
+    "from models import m_1d, m_1d2d, m_1d2d_01, m_1d2d_01_reg, m_3d, m_resnet"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_1 (InputLayer)         (None, 1, 128, 6)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 32, 124, 6)        192       \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 64, 118, 6)        14400     \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 128, 116, 4)       73856     \n",
-      "_________________________________________________________________\n",
-      "encoded1 (MaxPooling2D)      (None, 128, 58, 2)        0         \n",
-      "_________________________________________________________________\n",
-      "encoded2 (MaxPooling2D)      (None, 128, 29, 1)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 3712)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 150)               556950    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 7)                 1057      \n",
-      "=================================================================\n",
-      "Total params: 646,455\n",
-      "Trainable params: 558,007\n",
-      "Non-trainable params: 88,448\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -141,41 +103,6 @@
     "    '5': 'standing',\n",
     "    '6': 'walking'\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "\"\"\"\n",
-    "def conv_step(model, filters, size, name, **args):\n",
-    "    model.add(Conv1D(filters, size, name='conv' + str(name), **args))\n",
-    "    model.add(BatchNormalization(axis = 2, name='bn' + str(name)))\n",
-    "    model.add(Activation('relu'))\n",
-    "    return model\n",
-    "\n",
-    "def Model(input_shape):\n",
-    "    model = Sequential()\n",
-    "    \n",
-    "    model = conv_step(model, 30, 5, 0, input_shape=input_shape)\n",
-    "    \n",
-    "    model.add(Dropout(0.2))\n",
-    "    model.add(MaxPooling1D(2, name='max_pool'))\n",
-    "    \n",
-    "    model = conv_step(model, 40, 5, 1)\n",
-    "    \n",
-    "    model.add(Dropout(0.2))\n",
-    "    model.add(MaxPooling1D(2, name='max_pool1'))\n",
-    "    \n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(150, activation='relu', name='fc'))\n",
-    "    model.add(Dropout(0.2))\n",
-    "    model.add(Dense(7, activation='softmax', name='softmax'))\n",
-    "    \n",
-    "    return model\n",
-    "\"\"\""
    ]
   },
   {
