docs: add preview

--- a/002-ml.ipynb
+++ b/002-ml.ipynb
@@ -10,11 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available gpus []\n"
+     ]
+    }
+   ],
    "source": [
     "# generic imports\n",
     "import numpy as np\n",
@@ -38,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +62,7 @@
     "##################\n",
     "models_conf = {\n",
     "    'm_1d': {\n",
-    "        'active': True,\n",
+    "        'active': False,\n",
     "        'is_1d': True,\n",
     "        'model': m_1d\n",
     "    },\n",
@@ -69,7 +82,7 @@
     "        'model': m_1d2d_01\n",
     "    },\n",
     "    'm_1d2d_01_reg': {\n",
-    "        'active': False,\n",
+    "        'active': True,\n",
     "        'is_1d': False,\n",
     "        'model': m_1d2d_01_reg\n",
     "    },\n",
@@ -114,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -133,43 +146,57 @@
       "X_test shape: (5709, 128, 6)\n",
       "Y_test shape: (5709, 7)\n",
       "\n",
-      "Model summary for m_1d\n",
+      "Model summary for m_1d2d_01_reg\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 128, 6)            0         \n",
+      "input_1 (InputLayer)         (None, 1, 128, 6)         0         \n",
       "_________________________________________________________________\n",
-      "conv0 (Conv1D)               (None, 124, 30)           930       \n",
+      "conv0 (Conv2D)               (None, 16, 125, 6)        80        \n",
       "_________________________________________________________________\n",
-      "bn0 (BatchNormalization)     (None, 124, 30)           496       \n",
+      "activation_1 (Activation)    (None, 16, 125, 6)        0         \n",
       "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 124, 30)           0         \n",
+      "conv1 (Conv2D)               (None, 32, 122, 6)        2080      \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 124, 30)           0         \n",
+      "activation_2 (Activation)    (None, 32, 122, 6)        0         \n",
       "_________________________________________________________________\n",
-      "max_pool0 (MaxPooling1D)     (None, 62, 30)            0         \n",
+      "dropout_1 (Dropout)          (None, 32, 122, 6)        0         \n",
       "_________________________________________________________________\n",
-      "conv1 (Conv1D)               (None, 58, 40)            6040      \n",
+      "conv2 (Conv2D)               (None, 64, 120, 6)        6208      \n",
       "_________________________________________________________________\n",
-      "bn1 (BatchNormalization)     (None, 58, 40)            232       \n",
+      "activation_3 (Activation)    (None, 64, 120, 6)        0         \n",
       "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 58, 40)            0         \n",
+      "conv3 (Conv2D)               (None, 64, 120, 6)        36928     \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 58, 40)            0         \n",
+      "activation_4 (Activation)    (None, 64, 120, 6)        0         \n",
       "_________________________________________________________________\n",
-      "max_pool1 (MaxPooling1D)     (None, 29, 40)            0         \n",
+      "dropout_2 (Dropout)          (None, 64, 120, 6)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 1160)              0         \n",
+      "max_pool0 (MaxPooling2D)     (None, 64, 60, 3)         0         \n",
       "_________________________________________________________________\n",
-      "fc (Dense)                   (None, 150)               174150    \n",
+      "conv4 (Conv2D)               (None, 64, 60, 3)         24640     \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 150)               0         \n",
+      "activation_5 (Activation)    (None, 64, 60, 3)         0         \n",
+      "_________________________________________________________________\n",
+      "max_pool1 (MaxPooling2D)     (None, 64, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "conv5 (Conv2D)               (None, 64, 30, 1)         24640     \n",
+      "_________________________________________________________________\n",
+      "activation_6 (Activation)    (None, 64, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 64, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 1920)              0         \n",
+      "_________________________________________________________________\n",
+      "fc (Dense)                   (None, 150)               288150    \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 150)               0         \n",
       "_________________________________________________________________\n",
       "softmax (Dense)              (None, 7)                 1057      \n",
       "=================================================================\n",
-      "Total params: 182,905\n",
-      "Trainable params: 182,541\n",
-      "Non-trainable params: 364\n",
+      "Total params: 383,783\n",
+      "Trainable params: 383,783\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
      ]
